<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ray.carbontracker_flame.UI.EditRouteActivity">

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/route_name"
        android:id="@+id/txtNameInEditAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/route_name"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txtHighway" />

    <EditText
        android:id="@+id/editCityDistanceInEditAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtNameInEditAct"
        android:layout_below="@+id/txtNameInEditAct"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/city_distance_km"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/editHighWayDistanceInEditAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editCityDistanceInEditAct"
        android:layout_below="@+id/editCityDistanceInEditAct"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/highway_distance_km"
        android:inputType="number|numberDecimal"
        android:layout_toEndOf="@+id/txtHighway" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/editHighWayDistanceInEditAct" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btnCancel"
        android:layout_alignTop="@+id/btnSave"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/route_name"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city_distance"
        android:id="@+id/txtCity"
        android:layout_alignTop="@+id/editCityDistanceInEditAct"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/highway_distance"
        android:id="@+id/txtHighway"
        android:layout_alignTop="@+id/editHighWayDistanceInEditAct"
        android:layout_alignParentStart="true" />


</RelativeLayout>
