<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ray.carbontracker_flame.UI.AboutActivity">

    <TextView
        android:text="@string/information_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/information_text"
        android:autoLink="web"
        android:textColorLink="#0000FF"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/app_description"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/appdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_description"
        android:layout_below="@+id/course_homepage"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/about_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_string"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/course_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorLink="#0000FF"
        android:id="@+id/course_homepage"
        android:layout_alignBottom="@+id/about_string"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/courseinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/course_info"
        tools:ignore="RelativeOverlap"
        android:layout_below="@+id/about_string"
        android:layout_alignParentStart="true" />
</RelativeLayout>
