<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ray.carbontracker_flame.UI.AddRouteActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/route_name"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city_distance"
        android:id="@+id/txtCity"
        android:layout_alignTop="@+id/edtCityDistance"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/highway_distance"
        android:id="@+id/txtHighway"
        android:layout_alignTop="@+id/edtHighWayDistance"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edtRouteName"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/route_name"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txtHighway" />



    <EditText
        android:id="@+id/edtCityDistance"
        android:hint="@string/city_distance_km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtRouteName"
        android:layout_below="@+id/edtRouteName"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/edtHighWayDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edtCityDistance"
        android:layout_below="@+id/edtCityDistance"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/highway_distance_km"
        android:inputType="number|numberDecimal"
        android:layout_alignStart="@+id/edtCityDistance" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_alignEnd="@+id/edtHighWayDistance" />
</RelativeLayout>