<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ray.carbontracker_flame.UI.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnDisplayJourneys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/road_white"
            android:text="@string/display_journeys"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnBills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/clipboard_white"
            android:text="@string/add_a_new_natural_gas_or_electricity_bill"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnDisplayCarbonFootPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/pie2_white"
            android:text="@string/display_carbon_footprint"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/cog_white"
            android:text="@string/settings"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:drawableLeft="@drawable/about_white"
        android:text="@string/about_str"
        android:textColor="@android:color/white" />

</RelativeLayout>
