<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ray.carbontracker_flame.UI.AddCarActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_year"
        android:prompt="@string/default_text_name_addcar"
        android:layout_alignBaseline="@+id/spinner_model"
        android:layout_alignBottom="@+id/spinner_model"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/default_text_name_addcar"
        android:ems="10"
        android:layout_marginStart="13dp"
        android:id="@+id/edittext_name"
        android:layout_alignBaseline="@+id/text_name_addcar"
        android:layout_alignBottom="@+id/text_name_addcar"
        android:layout_toEndOf="@+id/spinner_model"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/text_name_addcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/text_name_addcar"
        android:layout_marginStart="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/ok_text_addcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn_addCar_ok" />

    <Button
        android:text="@string/cancel_text_addcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_addCar_cancel"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btn_addCar_ok" />

    <TextView
        android:text="@string/select_make_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/text_make_addcar" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/spinner_make"
        android:layout_below="@+id/text_make_addcar"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:id="@+id/spinner_model"
        android:layout_below="@+id/spinner_make"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/select_year_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_year_addcar"
        android:layout_below="@+id/spinner_make"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/select_model_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_model_addcar"
        android:layout_alignBaseline="@+id/text_year_addcar"
        android:layout_alignBottom="@+id/text_year_addcar"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Choose Icons:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_model"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:id="@+id/text_chooseicon_addcar" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_chooseicon_addcar"
        android:layout_alignParentStart="true"
        android:id="@+id/spinner_icons" />
</RelativeLayout>
